# neural-pfaffian

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: pre-commit.yaml  test.yaml
config/models/: ferminet.yaml  pesnet.yaml  psiformer.yaml
config/seml/: train_n2.yaml
config/systems/: n2-single.yaml  n2.yaml
config/systems/single/: lih.yaml
notebooks/: test.ipynb
src/neural_pfaffian/: __main__.py  clipping.py  dataset.py  hamiltonian.py  hf.py  linalg.py  logger.py  main.py  mcmc.py  observable.py  preconditioner.py  pretraining.py  systems.py  train.py  vmc.py
src/neural_pfaffian/config/: __init__.py  default.yaml
src/neural_pfaffian/data/deeperwin/: datasets.json
src/neural_pfaffian/nn/: __init__.py  edges.py  embeddings.py  envelope.py  envelopes.py  ferminet.py  jastrow.py  meta_network.py  module.py  moon.py  ops.py  orbitals.py  psiformer.py  utils.py  wave_function.py
src/neural_pfaffian/nn/antisymmetrizer/: __init__.py  low_rank_pfaffian.py  pfaffian.py  slater.py  utils.py
src/neural_pfaffian/nn/embedding/: __init__.py  ferminet.py  moon.py  psiformer.py
src/neural_pfaffian/utils/: __init__.py  cg.py  gto.py  jax_utils.py  optim.py  tree_utils.py
test/: fixtures.py  test_clipping.py  test_embedding.py  test_generalized.py  test_hamiltonian.py  test_linalg.py  test_mcmc.py  test_metagnn.py  test_preconditioner.py  test_pretraining.py  test_systems.py  test_vmc.py  test_wave_function.py  utils.py
