[project]
name = "neural_pfaffian"
version = "0.0.1"
authors = [{ name = "Nicholas Gao", email = "n.gao@tum.de" }]
requires-python = ">= 3.11"
dependencies = [
    "einops>=0.8.0",
    "flax>=0.9.0",
    "folx>=0.2.12",
    "jax-cuda12-pjrt>0.4.34",
    "jax-cuda12-plugin[with-cuda]>0.4.34",
    "jax>0.4.34",
    "jaxlib>0.4.34",
    "jaxtyping>=0.2.34",
    "numpy>=2.1.2",
    "nvidia-cublas-cu12==12.6.0.22",
    "nvidia-cuda-cupti-cu12==12.6.37",
    "nvidia-cuda-nvcc-cu12==12.6.20",
    "nvidia-cuda-runtime-cu12==12.6.37",
    "nvidia-cudnn-cu12==9.3.0.75",
    "nvidia-cufft-cu12==11.2.6.28",
    "nvidia-cusolver-cu12==11.6.4.38",
    "nvidia-cusparse-cu12==12.5.2.23",
    "nvidia-nccl-cu12==2.22.3",
    "nvidia-nvjitlink-cu12==12.6.20",
    "optax>=0.2.3",
    "pyscf>=2.7.0",
    "seml>=0.5.3",
    "tqdm>=4.66.5",
    "wandb>=0.18.5",
]
license = { text = "MIT" }

[project.scripts]
neural_pfaffian = "neural_pfaffian.__main__:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-n auto"

[tool.pytest_env]
JAX_PLATFORMS = "cpu"
JAX_ENABLE_X64 = "True"
XLA_FLAGS = "--xla_force_host_platform_device_count=4"
# JAX_DEFAULT_DTYPE_BITS = "32"

[tool.ruff]
line-length = 90

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"
indent-style = "space"

[tool.ruff.lint]
ignore = ["F722", "E741"]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["F841"] # unused variables are allowed in main.py

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.0.1",
    "pytest-env>=1.1.5",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]
find-links = [
    "https://storage.googleapis.com/jax-releases/jax_nightly_releases.html",
]
prerelease = "allow"

[tool.uv.sources]
optax = { git = "https://github.com/google-deepmind/optax.git" }
